fix(calc): Improve grid colors in dark mode

--- a/browser/css/color-palette-dark.css
+++ b/browser/css/color-palette-dark.css
@@ -50,6 +50,8 @@
 	--color-box-shadow: rgba(0, 0, 0, 0.5);
 	--color-hyperlink: #1d99f3;
 
+	--color-calc-grid: #474747;
+
 	--color-grid-helper-line-solid: #e6e6e6;
 	--color-grid-helper-line-dashed: #191919;
 	--color-smart-guides-helper-line: #f36d4f;
